# smarthome_media_msgs

./: .gitignore  .project  CMakeLists.txt  README.md  package.xml  setup.py
msg/: Command.msg  Context.msg  KeyValue.msg  MediaAction.msg  MediaItem.msg  MediaType.msg  MonitorInfo.msg  PlayerInfo.msg  SpeakerInfo.msg  StateData.msg
srv/: MediaGetItem.srv  MediaGetItems.srv
